compiled with openssl library

--- a/trials/Makefile
+++ b/trials/Makefile
@@ -1,5 +1,5 @@
 CFLAGS 	:= -ggdb -Wall
-SECFLAGS	:= -l lcrypto
+SECFLAGS	:= -lcrypto
 CC := g++
 DEBUG ?= 
 
@@ -8,10 +8,10 @@ OBJS := server.o client.o util.o key.o
 all: security client
 
 security: 		$(OBJS) main.cpp
-			$(CC) $(CFLAGS) $(DEBUG) $^ -o $@ $(DBFLAGS)
+			$(CC) $(CFLAGS) $(DEBUG) $(SECFLAGS) $^ -o $@ $(DBFLAGS)
 			
 client:			$(OBJS) cmain.cpp
-			$(CC) $(CFLAGS) $(DEBUG) $^ -o $@ $(DBFLAGS)
+			$(CC) $(CFLAGS) $(DEBUG) $(SECFLAGS) $^ -o $@ $(DBFLAGS)
 			
 server.o: 		server.cpp
 			g++ -c $(CFLAGS) $(DEBUG) server.cpp
@@ -19,8 +19,8 @@ server.o: 		server.cpp
 client.o:		client.cpp
 			g++ -c $(CFLAGS) $(DEBUG) client.cpp
 			
-util.o: 		util.cpp
-			g++ -c $(CFLAGS) $(DEBUG) util.cpp
-
 key.o:			key.cpp
 			g++ -c $(CFLAGS) $(DEBUG) $(SECFLAGS) key.cpp
+			
+util.o: 		util.cpp
+			g++ -c $(CFLAGS) $(DEBUG) util.cpp
